@@ -30,7 +30,7 @@
  DAMAGE. 
  =========================================================================*/
 
-/* $Id: global.h,v 1.5 2000/05/03 22:02:10 petr Exp $ */
+/* $Id: global.h,v 1.6 2000/05/05 17:35:00 broeker Exp $ */
 
 /*	cscope - interactive C symbol cross-reference
  *
@@ -240,7 +240,7 @@ void	mousereinit(void);
 void	myexit(int sig);
 void	myperror(char *text);
 void	ogsnames(char *file, char **subsystem, char **book);
-void	progress(const char *fmt, ...);
+void	progress(char *what, long current, long max);
 void	putfilename(char *srcfile);
 void	postmsg(char *msg);
 void	postmsg2(char *msg);
